--- a/WpfApp_FlexPanelT/FlexItem.xaml
+++ b/WpfApp_FlexPanelT/FlexItem.xaml
@@ -5,16 +5,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp_FlexPanelT"
              mc:Ignorable="d" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <Button>
+        <Grid>
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseEnter">
+                    <i:ChangePropertyAction TargetName="button_edit" PropertyName="Visibility" Value="Visible"/>
+                </i:EventTrigger>
+                <i:EventTrigger EventName="MouseLeave">
+                    <i:ChangePropertyAction TargetName="button_edit" PropertyName="Visibility" Value="Hidden"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
             <TextBlock Text="{Binding Name}"/>
-        </Button>
-        <Button Grid.Column="1">
+            <Button x:Name="button_edit" Content="Edit" Visibility="Hidden"/>
+        </Grid>
+        <Button Grid.Column="1" x:Name="button_delete" Click="button_delete_Click">
             <Path Data="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z" Stroke="Black"/>
         </Button>
     </Grid>
