--- a/WpfApp_FlexPanelT/MainWindow.xaml
+++ b/WpfApp_FlexPanelT/MainWindow.xaml
@@ -15,80 +15,91 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <TabControl x:Name="tabcontrol" >
-            <TabItem Header="Container">
-                <qpanel:FlexPanel FlexDirection="Column" Gap="8" AlignItems="Stretch">
-                    <Button x:Name="button_addflex" Click="button_addflex_Click">Add Flex Item</Button>
-                    <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
-                        <TextBlock Text="Flex-direction"/>
-                        <ComboBox SelectedValuePath="Tag" SelectedValue="{Binding FlexDirection, ElementName=flexpanel}">
-                            <ComboBoxItem Content="Row" Tag="{x:Static qpanel:FlexDirection.Row}"/>
-                            <ComboBoxItem Content="Column" Tag="{x:Static qpanel:FlexDirection.Column}"/>
-                        </ComboBox>
+        <qpanel:FlexPanel FlexDirection="Column" AlignItems="Stretch" Gap="5">
+            <!--<Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>-->
+            <Button x:Name="button_addflex" Click="button_addflex_Click">Add Flex Item</Button>
+            <TabControl x:Name="tabcontrol" qpanel:FlexPanel.Grow="1" Grid.Row="1" >
+                <TabItem Header="Container">
+                    <qpanel:FlexPanel FlexDirection="Column" Gap="8" AlignItems="Stretch">
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Flex-direction"/>
+                            <ComboBox SelectedValuePath="Tag" SelectedValue="{Binding FlexDirection, ElementName=flexpanel}">
+                                <ComboBoxItem Content="Row" Tag="{x:Static qpanel:FlexDirection.Row}"/>
+                                <ComboBoxItem Content="Column" Tag="{x:Static qpanel:FlexDirection.Column}"/>
+                            </ComboBox>
+                        </qpanel:FlexPanel>
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Justify-content"/>
+                            <ComboBox SelectedValuePath="Tag" SelectedValue="{Binding JustifyContent, ElementName=flexpanel}">
+                                <ComboBoxItem Content="Start" Tag="{x:Static qpanel:JustifyContent.Start}"/>
+                                <ComboBoxItem Content="Center" Tag="{x:Static qpanel:JustifyContent.Center}"/>
+                                <ComboBoxItem Content="End" Tag="{x:Static qpanel:JustifyContent.End}"/>
+                                <ComboBoxItem Content="SpaceAround" Tag="{x:Static qpanel:JustifyContent.SpaceAround}"/>
+                                <ComboBoxItem Content="SpaceBetween" Tag="{x:Static qpanel:JustifyContent.SpaceBetween}"/>
+                                <ComboBoxItem Content="SpaceEvenly" Tag="{x:Static qpanel:JustifyContent.SpaceEvenly}"/>
+                            </ComboBox>
+                        </qpanel:FlexPanel>
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Align-items"/>
+                            <ComboBox SelectedValuePath="Tag" SelectedValue="{Binding AlignItems, ElementName=flexpanel}">
+                                <ComboBoxItem Content="Start" Tag="{x:Static qpanel:AlignItems.Start}"/>
+                                <ComboBoxItem Content="Center" Tag="{x:Static qpanel:AlignItems.Center}"/>
+                                <ComboBoxItem Content="End" Tag="{x:Static qpanel:AlignItems.End}"/>
+                                <ComboBoxItem Content="Stretch" Tag="{x:Static qpanel:AlignItems.Stretch}"/>
+                            </ComboBox>
+                        </qpanel:FlexPanel>
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Gap"/>
+                            <TextBox InputMethod.IsInputMethodEnabled="False" Text="{Binding Gap, ElementName=flexpanel, UpdateSourceTrigger=PropertyChanged}"/>
+                        </qpanel:FlexPanel>
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Padding"/>
+                            <TextBox Text="{Binding Padding, ElementName=flexpanel, UpdateSourceTrigger=PropertyChanged}"/>
+                        </qpanel:FlexPanel>
+                        <CheckBox>Scrollbar</CheckBox>
                     </qpanel:FlexPanel>
-                    <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
-                        <TextBlock Text="Justify-content"/>
-                        <ComboBox SelectedValuePath="Tag" SelectedValue="{Binding JustifyContent, ElementName=flexpanel}">
-                            <ComboBoxItem Content="Start" Tag="{x:Static qpanel:JustifyContent.Start}"/>
-                            <ComboBoxItem Content="Center" Tag="{x:Static qpanel:JustifyContent.Center}"/>
-                            <ComboBoxItem Content="End" Tag="{x:Static qpanel:JustifyContent.End}"/>
-                            <ComboBoxItem Content="SpaceAround" Tag="{x:Static qpanel:JustifyContent.SpaceAround}"/>
-                            <ComboBoxItem Content="SpaceBetween" Tag="{x:Static qpanel:JustifyContent.SpaceBetween}"/>
-                            <ComboBoxItem Content="SpaceEvenly" Tag="{x:Static qpanel:JustifyContent.SpaceEvenly}"/>
-                        </ComboBox>
-                    </qpanel:FlexPanel>
-                    <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
-                        <TextBlock Text="Align-items"/>
-                        <ComboBox SelectedValuePath="Tag" SelectedValue="{Binding AlignItems, ElementName=flexpanel}">
-                            <ComboBoxItem Content="Start" Tag="{x:Static qpanel:AlignItems.Start}"/>
-                            <ComboBoxItem Content="Center" Tag="{x:Static qpanel:AlignItems.Center}"/>
-                            <ComboBoxItem Content="End" Tag="{x:Static qpanel:AlignItems.End}"/>
-                            <ComboBoxItem Content="Stretch" Tag="{x:Static qpanel:AlignItems.Stretch}"/>
-                        </ComboBox>
-                    </qpanel:FlexPanel>
-                    <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
-                        <TextBlock Text="Gap"/>
-                        <TextBox InputMethod.IsInputMethodEnabled="False" Text="{Binding Gap, ElementName=flexpanel, UpdateSourceTrigger=PropertyChanged}"/>
-                    </qpanel:FlexPanel>
-                    <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
-                        <TextBlock Text="Padding"/>
-                        <TextBox Text="{Binding Padding, ElementName=flexpanel, UpdateSourceTrigger=PropertyChanged}"/>
-                    </qpanel:FlexPanel>
-                    <CheckBox>Scrollbar</CheckBox>
-                </qpanel:FlexPanel>
-            </TabItem>
-            <TabItem Header="Item">
-                <i:Interaction.Triggers>
-                    <i:DataTrigger Binding="{Binding ItemData}" Value="{x:Null}">
-                        <i:ChangePropertyAction TargetName="flexpanel_itemdata" PropertyName="Visibility" Value="Hidden"/>
-                    </i:DataTrigger>
-                    <i:DataTrigger Binding="{Binding ItemData}" Comparison="NotEqual" Value="{x:Null}">
-                        <i:ChangePropertyAction TargetName="flexpanel_itemdata" PropertyName="Visibility" Value="Visible"/>
-                    </i:DataTrigger>
-                </i:Interaction.Triggers>
+                </TabItem>
+                <TabItem Header="Item">
+                    <i:Interaction.Triggers>
+                        <i:DataTrigger Binding="{Binding ItemData}" Value="{x:Null}">
+                            <i:ChangePropertyAction TargetName="flexpanel_itemdata" PropertyName="Visibility" Value="Hidden"/>
+                        </i:DataTrigger>
+                        <i:DataTrigger Binding="{Binding ItemData}" Comparison="NotEqual" Value="{x:Null}">
+                            <i:ChangePropertyAction TargetName="flexpanel_itemdata" PropertyName="Visibility" Value="Visible"/>
+                        </i:DataTrigger>
+                    </i:Interaction.Triggers>
 
-                <qpanel:FlexPanel Padding="1,0,3,0" x:Name="flexpanel_itemdata"  FlexDirection="Column" Gap="8" AlignItems="Stretch">
-                    <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
-                        <TextBlock Text="Flex-Grow"/>
-                        <TextBox x:Name="textbox_flexgrow" TextChanged="textbox_flexgrow_TextChanged" Text="{Binding ItemData.FlexGrow, UpdateSourceTrigger=PropertyChanged}"/>
+                    <qpanel:FlexPanel Padding="1,0,3,0" x:Name="flexpanel_itemdata"  FlexDirection="Column" Gap="8" AlignItems="Stretch">
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Flex-Grow"/>
+                            <TextBox x:Name="textbox_flexgrow" TextChanged="textbox_flexgrow_TextChanged" Text="{Binding ItemData.FlexGrow, UpdateSourceTrigger=PropertyChanged}"/>
+                        </qpanel:FlexPanel>
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Flex-Shrink"/>
+                            <TextBox x:Name="textbox_flexshrink"  Text="{Binding ItemData.FlexShrink, UpdateSourceTrigger=PropertyChanged}"/>
+                        </qpanel:FlexPanel>
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Flex-Basis"/>
+                            <TextBox x:Name="textbox_flexbasis" TextChanged="textbox_flexbasis_TextChanged" Text="{Binding ItemData.FlexBasis, UpdateSourceTrigger=PropertyChanged}"/>
+                        </qpanel:FlexPanel>
+                        <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
+                            <TextBlock Text="Align-Self"/>
+                            <ComboBox x:Name="combobox_alighself" SelectionChanged="combobox_alighself_SelectionChanged" SelectedValuePath="Tag" SelectedValue="{Binding ItemData.AlignSelf}">
+                                <ComboBoxItem Content="Auto" Tag="{x:Static qpanel:AlignSelf.Auto}"/>
+                                <ComboBoxItem Content="Start" Tag="{x:Static qpanel:AlignSelf.Start}"/>
+                                <ComboBoxItem Content="End" Tag="{x:Static qpanel:AlignSelf.End}"/>
+                                <ComboBoxItem Content="Center" Tag="{x:Static qpanel:AlignSelf.Center}"/>
+                                <ComboBoxItem Content="Stretch" Tag="{x:Static qpanel:AlignSelf.Stretch}"/>
+                            </ComboBox>
+                        </qpanel:FlexPanel>
                     </qpanel:FlexPanel>
-                    <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
-                        <TextBlock Text="Flex-Basis"/>
-                        <TextBox x:Name="textbox_flexbasis" TextChanged="textbox_flexbasis_TextChanged" Text="{Binding ItemData.FlexBasis, UpdateSourceTrigger=PropertyChanged}"/>
-                    </qpanel:FlexPanel>
-                    <qpanel:FlexPanel Gap="3" FlexDirection="Column" AlignItems="Stretch">
-                        <TextBlock Text="Align-Self"/>
-                        <ComboBox x:Name="combobox_alighself" SelectionChanged="combobox_alighself_SelectionChanged" SelectedValuePath="Tag" SelectedValue="{Binding ItemData.AlignSelf}">
-                            <ComboBoxItem Content="Auto" Tag="{x:Static qpanel:AlignSelf.Auto}"/>
-                            <ComboBoxItem Content="Start" Tag="{x:Static qpanel:AlignSelf.Start}"/>
-                            <ComboBoxItem Content="End" Tag="{x:Static qpanel:AlignSelf.End}"/>
-                            <ComboBoxItem Content="Center" Tag="{x:Static qpanel:AlignSelf.Center}"/>
-                            <ComboBoxItem Content="Stretch" Tag="{x:Static qpanel:AlignSelf.Stretch}"/>
-                        </ComboBox>
-                    </qpanel:FlexPanel>
-                </qpanel:FlexPanel>
-            </TabItem>
-        </TabControl>
+                </TabItem>
+            </TabControl>
+
+        </qpanel:FlexPanel>
         <GridSplitter Grid.Column="1" Width="2" HorizontalAlignment="Center" VerticalAlignment="Stretch" Background="Gray"/>
         <qpanel:FlexPanel FlexDirection="Row" x:Name="flexpanel" Grid.Column="2">
 
