--- a/WpfApp_FlexPanelT/FlexItem.xaml
+++ b/WpfApp_FlexPanelT/FlexItem.xaml
@@ -8,14 +8,15 @@
              d:DataContext="{d:DesignInstance Type=local:FlexItemVM}"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
+    <Border BorderThickness="1" Background="Green" BorderBrush="Red" Padding="5">
         <Grid>
-            <!--<i:Interaction.Triggers>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid>
+                <!--<i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseEnter">
                     <i:ChangePropertyAction TargetName="button_edit" PropertyName="Visibility" Value="Visible"/>
                 </i:EventTrigger>
@@ -23,14 +24,16 @@
                     <i:ChangePropertyAction TargetName="button_edit" PropertyName="Visibility" Value="Hidden"/>
                 </i:EventTrigger>
             </i:Interaction.Triggers>-->
-            <Button Content="{Binding Name}"/>
-            <!--<Button x:Name="button_edit" Click="button_edit_Click" Content="Edit" Visibility="Hidden"/>-->
+                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <!--<Button x:Name="button_edit" Click="button_edit_Click" Content="Edit" Visibility="Hidden"/>-->
+            </Grid>
+            <Button Grid.Column="1" x:Name="button_edit" Click="button_edit_Click">
+                <Path Fill="#000000" Data="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" />
+            </Button>
+            <Button Grid.Column="2" x:Name="button_delete" Click="button_delete_Click">
+                <Path Data="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z" Stroke="Black"/>
+            </Button>
         </Grid>
-        <Button Grid.Column="1" x:Name="button_edit" Click="button_edit_Click">
-            <Path Fill="#000000" Data="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" />
-        </Button>
-        <Button Grid.Column="2" x:Name="button_delete" Click="button_delete_Click">
-            <Path Data="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z" Stroke="Black"/>
-        </Button>
-    </Grid>
+
+    </Border>
 </UserControl>
