--- a/WpfApp_FlexPanelT/Theme/Dark.xaml
+++ b/WpfApp_FlexPanelT/Theme/Dark.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:local="clr-namespace:WpfApp_FlexPanelT"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <local:Oklch x:Key="color_gray_900" L="21" C="0.034" H="264.665"/>
-    <Color x:Key="aaaaa">#FFFFFF00</Color>
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Color.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+    <SolidColorBrush x:Key="border_br" Color="{DynamicResource color-gray-900}"/>
+
 </ResourceDictionary>
