--- a/WpfApp_FlexPanelT/App.xaml
+++ b/WpfApp_FlexPanelT/App.xaml
@@ -7,7 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <!--<ResourceDictionary Source="/Theme/Color.xaml"/>-->
-                <ResourceDictionary Source="/Theme/Light.xaml"/>
+                <ResourceDictionary Source="/Theme/Dark.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
         
