--- a/WpfApp_FlexPanelT/Theme/Color.xaml
+++ b/WpfApp_FlexPanelT/Theme/Color.xaml
@@ -11,7 +11,7 @@
     <local:Oklch x:Key="color-gray-600">oklch(44.6% 0.03 256.802)</local:Oklch>
     <local:Oklch x:Key="color-gray-700">37.3% 0.034 259.733</local:Oklch>
     <local:Oklch x:Key="color-gray-800">27.8% 0.033 256.848</local:Oklch>
-    <local:Oklch x:Key="color-gray-900" L="21" C="0.034" H="264.665"/>
-    <local:Oklch x:Key="color-gray-950">13% 0.028 261.692</local:Oklch>
-
+    <local:Oklch x:Key="color-gray-900">oklch(21% 0.034 264.665)</local:Oklch>
+    <local:Oklch x:Key="color-gray-950">oklch(13% 0.028 261.692)</local:Oklch>
+    
 </ResourceDictionary>
